--- a/index.html
+++ b/index.html
@@ -29,3 +29,5 @@
 <p><img src="rysunki/chom.23.jpeg" width="600" />
 <img src="rysunki/chom.24.jpeg" width="600" />
 <p><img src="rysunki/chom.25.jpeg" width="600" />
+<img src="rysunki/chom.26.jpeg" width="600" />
+</body>
