--- a/index.html
+++ b/index.html
@@ -30,4 +30,7 @@
 <img src="rysunki/chom.24.jpeg" width="600" />
 <p><img src="rysunki/chom.25.jpeg" width="600" />
 <img src="rysunki/chom.26.jpeg" width="600" />
+<p><img src="rysunki/chom.27.jpeg" width="600" />
+<img src="rysunki/chom.28.jpeg" width="600" />
+<p><img src="rysunki/chom.29.jpeg" width="600" />
 </body>
