--- a/index.html
+++ b/index.html
@@ -33,4 +33,7 @@
 <p><img src="rysunki/chom.27.jpeg" width="600" />
 <img src="rysunki/chom.28.jpeg" width="600" />
 <p><img src="rysunki/chom.29.jpeg" width="600" />
+<img src="rysunki/chom.30.jpeg" width="600" />
+<p><img src="rysunki/chom.31.jpeg" width="600" />
+
 </body>
