--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
 <p><img src="rysunki/chom.29.jpeg" width="600" />
 <img src="rysunki/chom.30.jpeg" width="600" />
 <p><img src="rysunki/chom.31.jpeg" width="600" />
-
+<img src="rysunki/chom.32.jpeg" width="600" />
 </body>
