--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>śmieszne chomiki</h1>
-<h2>Dla Janka mojego największego fana.</h2>
+<h2>Dla Janka największego fana chomików.</h2>
 <p><img src="rysunki/chom.1.jpeg" width="600" />
 <img src="rysunki/chom.2.jpeg" width="600" />
 <p><img src="rysunki/chom.3.jpeg" width="600" />
