--- a/index.html
+++ b/index.html
@@ -38,4 +38,5 @@
 <p><img src="rysunki/chom.31.jpeg" width="600" />
 <img src="rysunki/chom.32.jpeg" width="600" />
 <p><img src="rysunki/chom.33.jpeg" width="600" />
+<img src="rysunki/chom.34.jpeg" width="600" />
 </body>
