--- a/index.html
+++ b/index.html
@@ -39,4 +39,5 @@
 <img src="rysunki/chom.32.jpeg" width="600" />
 <p><img src="rysunki/chom.33.jpeg" width="600" />
 <img src="rysunki/chom.34.jpeg" width="600" />
+<p><img src="rysunki/chom.35.jpeg" width="600" />
 </body>
