--- a/index.html
+++ b/index.html
@@ -40,4 +40,7 @@
 <p><img src="rysunki/chom.33.jpeg" width="600" />
 <img src="rysunki/chom.34.jpeg" width="600" />
 <p><img src="rysunki/chom.35.jpeg" width="600" />
+<img src="rysunki/chom.36.jpeg" width="600" />
+<p><img src="rysunki/chom.37.jpeg" width="600" />
+<img src="rysunki/chom.38.jpeg" width="600" />
 </body>
