zmiany nazw chomików

--- a/galeria.html
+++ b/galeria.html
@@ -7,18 +7,18 @@
 <p></p>
 <h1>galeria</h1>
 <nav><a href="index.html">główna</a></nav>
-<p><img src="rysunki/chom.1.jpeg" width="600" />
-<img src="rysunki/chom.2.jpeg" width="600" />
-<p><img src="rysunki/chom.3.jpeg" width="600" />
-<img src="rysunki/chom.4.jpeg" width="600" />
-<p><img src="rysunki/chom.5.jpeg" width="600" />
-<img src="rysunki/chom.6.jpeg" width="600" />
-<p><img src="rysunki/chom.7.jpeg" width="600" />
-<img src="rysunki/chom.8.jpeg" width="600" />
-<p><img src="rysunki/chom.9.jpeg" width="600" />
-<img src="rysunki/chom.10.jpeg" width="600" />
-<p><img src="rysunki/chom.11.jpeg" width="600" />
-<img src="rysunki/chom.12.jpeg" width="600" />
+<p><img src="rysunki/chom_średniowieczny_1.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_2.jpeg" width="600" />
+<p><img src="rysunki/chom_architekt_1.jpeg" width="600" />
+<img src="rysunki/chom_naukowiec_1.jpeg" width="600" />
+<p><img src="rysunki/chom_hulk.jpeg" width="600" />
+<img src="rysunki/chom_kolejarz_1.jpeg" width="600" />
+<p><img src="rysunki/chom_ironhulk.jpeg" width="600" />
+<img src="rysunki/chom_baletnica_1.jpeg" width="600" />
+<p><img src="rysunki/chom_generał.jpeg" width="600" />
+<img src="rysunki/chom_zabójca.jpeg" width="600" />
+<p><img src="rysunki/chom_ninja.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_3.jpeg" width="600" />
 <p><img src="rysunki/chom.13.jpeg" width="600" />
 <img src="rysunki/chom.14.jpeg" width="600" />
 <p><img src="rysunki/chom.15.jpeg" width="600" />
