--- a/galeria.html
+++ b/galeria.html
@@ -19,30 +19,30 @@
 <img src="rysunki/chom_zabójca.jpeg" width="600" />
 <p><img src="rysunki/chom_ninja.jpeg" width="600" />
 <img src="rysunki/chom_średniowieczny_3.jpeg" width="600" />
-<p><img src="rysunki/chom.13.jpeg" width="600" />
-<img src="rysunki/chom.14.jpeg" width="600" />
-<p><img src="rysunki/chom.15.jpeg" width="600" />
-<img src="rysunki/chom.16.jpeg" width="600" />
-<p><img src="rysunki/chom.17.jpeg" width="600" />
-<img src="rysunki/chom.18.jpeg" width="600" />
-<p><img src="rysunki/chom.19.jpeg" width="600" />
-<img src="rysunki/chom.20.jpeg" width="600" />
-<p><img src="rysunki/chom.21.jpeg" width="600" />
-<img src="rysunki/chom.22.jpeg" width="600" />
-<p><img src="rysunki/chom.23.jpeg" width="600" />
-<img src="rysunki/chom.24.jpeg" width="600" />
-<p><img src="rysunki/chom.25.jpeg" width="600" />
-<img src="rysunki/chom.26.jpeg" width="600" />
-<p><img src="rysunki/chom.27.jpeg" width="600" />
-<img src="rysunki/chom.28.jpeg" width="600" />
-<p><img src="rysunki/chom.29.jpeg" width="600" />
-<img src="rysunki/chom.30.jpeg" width="600" />
-<p><img src="rysunki/chom.31.jpeg" width="600" />
-<img src="rysunki/chom.32.jpeg" width="600" />
-<p><img src="rysunki/chom.33.jpeg" width="600" />
-<img src="rysunki/chom.34.jpeg" width="600" />
-<p><img src="rysunki/chom.35.jpeg" width="600" />
-<img src="rysunki/chom.36.jpeg" width="600" />
-<p><img src="rysunki/chom.37.jpeg" width="600" />
-<img src="rysunki/chom.38.jpeg" width="600" />
+<p><img src="rysunki/chom_youtuber.jpeg" width="600" />
+<img src="rysunki/chom_piękny.jpeg" width="600" />
+<p><img src="rysunki/chom_vader.jpeg" width="600" />
+<img src="rysunki/chom_kolorowy.jpeg" width="600" />
+<p><img src="rysunki/chom_kolejarz_2.jpeg" width="600" />
+<img src="rysunki/chom_kolejarz_3.jpeg" width="600" />
+<p><img src="rysunki/chom_średniowieczny_4.jpeg" width="600" />
+<img src="rysunki/chom_ironman.jpeg" width="600" />
+<p><img src="rysunki/chom_średniowieczny_5.jpeg" width="600" />
+<img src="rysunki/chom_steampunk.jpeg" width="600" />
+<p><img src="rysunki/chom_naukowiec_2.jpeg" width="600" />
+<img src="rysunki/chom_baletnica_2.jpeg" width="600" />
+<p><img src="rysunki/chom_naukowiec_3.jpeg" width="600" />
+<img src="rysunki/chom_halloween.jpeg" width="600" />
+<p><img src="rysunki/chom_smok.jpeg" width="600" />
+<img src="rysunki/chom_piłkarz.jpeg" width="600" />
+<p><img src="rysunki/chom_majonez.jpeg" width="600" />
+<img src="rysunki/chom_kucharz.jpeg" width="600" />
+<p><img src="rysunki/chom_babyyoda.jpeg" width="600" />
+<img src="rysunki/chom_malarz.jpeg" width="600" />
+<p><img src="rysunki/chom_Mikołaj.jpeg" width="600" />
+<img src="rysunki/chom_biznesman.jpeg" width="600" />
+<p><img src="rysunki/chom_nurek.jpeg" width="600" />
+<img src="rysunki/chom_świętujący.jpeg" width="600" />
+<p><img src="rysunki/chom_noworoczny.jpeg" width="600" />
+<img src="rysunki/chom_rockman.jpeg" width="600" />
 </body>
