--- a/galeria.html
+++ b/galeria.html
@@ -4,45 +4,52 @@
 <link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<p></p>
 <h1>galeria</h1>
 <nav><a href="index.html">główna</a></nav>
-<p><img src="rysunki/chom_średniowieczny_1.jpeg" width="600" />
-<img src="rysunki/chom_średniowieczny_2.jpeg" width="600" />
-<p><img src="rysunki/chom_architekt_1.jpeg" width="600" />
-<img src="rysunki/chom_naukowiec_1.jpeg" width="600" />
-<p><img src="rysunki/chom_hulk.jpeg" width="600" />
-<img src="rysunki/chom_kolejarz_1.jpeg" width="600" />
-<p><img src="rysunki/chom_ironhulk.jpeg" width="600" />
-<img src="rysunki/chom_baletnica_1.jpeg" width="600" />
-<p><img src="rysunki/chom_generał.jpeg" width="600" />
-<img src="rysunki/chom_zabójca.jpeg" width="600" />
-<p><img src="rysunki/chom_ninja.jpeg" width="600" />
-<img src="rysunki/chom_średniowieczny_3.jpeg" width="600" />
-<p><img src="rysunki/chom_youtuber.jpeg" width="600" />
+<h3>historyczne</h3>
+<img src="rysunki/chom_faraon.jpeg" width="600" />
 <img src="rysunki/chom_piękny.jpeg" width="600" />
-<p><img src="rysunki/chom_vader.jpeg" width="600" />
-<img src="rysunki/chom_kolorowy.jpeg" width="600" />
-<p><img src="rysunki/chom_kolejarz_2.jpeg" width="600" />
-<img src="rysunki/chom_kolejarz_3.jpeg" width="600" />
-<p><img src="rysunki/chom_średniowieczny_4.jpeg" width="600" />
-<img src="rysunki/chom_ironman.jpeg" width="600" />
-<p><img src="rysunki/chom_średniowieczny_5.jpeg" width="600" />
-<img src="rysunki/chom_steampunk.jpeg" width="600" />
-<p><img src="rysunki/chom_naukowiec_2.jpeg" width="600" />
-<img src="rysunki/chom_baletnica_2.jpeg" width="600" />
-<p><img src="rysunki/chom_naukowiec_3.jpeg" width="600" />
-<img src="rysunki/chom_halloween.jpeg" width="600" />
-<p><img src="rysunki/chom_smok.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_1.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_2.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_3.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_4.jpeg" width="600" />
+<img src="rysunki/chom_średniowieczny_5.jpeg" width="600" />\
+<h3>zawodowe</h3>
+<img src="rysunki/chom_architekt_1.jpeg" width="600" />
+<img src="rysunki/chom_nurek.jpeg" width="600" />
+<img src="rysunki/chom_youtuber.jpeg" width="600" />
 <img src="rysunki/chom_piłkarz.jpeg" width="600" />
-<p><img src="rysunki/chom_majonez.jpeg" width="600" />
-<img src="rysunki/chom_kucharz.jpeg" width="600" />
-<p><img src="rysunki/chom_babyyoda.jpeg" width="600" />
 <img src="rysunki/chom_malarz.jpeg" width="600" />
-<p><img src="rysunki/chom_Mikołaj.jpeg" width="600" />
-<img src="rysunki/chom_biznesman.jpeg" width="600" />
-<p><img src="rysunki/chom_nurek.jpeg" width="600" />
-<img src="rysunki/chom_świętujący.jpeg" width="600" />
-<p><img src="rysunki/chom_noworoczny.jpeg" width="600" />
 <img src="rysunki/chom_rockman.jpeg" width="600" />
+<img src="rysunki/chom_kolejarz_1.jpeg" width="600"          />
+<img src="rysunki/chom_kolejarz_2.jpeg" width="600" />
+<img src="rysunki/chom_kolejarz_3.jpeg" width="600" />
+<img src="rysunki/chom_baletnica_1.jpeg" width="600" />
+<img src="rysunki/chom_baletnica_2.jpeg" width="600" />
+<img src="rysunki/chom_kucharz.jpeg" width="600" />
+<img src="rysunki/chom_biznesman.jpeg" width="600" />
+<img src="rysunki/chom_naukowiec_1.jpeg" width="600" />
+<img src="rysunki/chom_naukowiec_2.jpeg" width="600" />
+<img src="rysunki/chom_naukowiec_3.jpeg" width="600" />
+<h3>super bohaterowie</h3>
+<img src="rysunki/chom_hulk.jpeg" width="600" />
+<img src="rysunki/chom_ironman.jpeg" width="600" />
+<img src="rysunki/chom_ironhulk.jpeg" width="600" />
+<h3>w przebraniach</h3>
+<img src="rysunki/chom_majonez.jpeg" width="600" />
+<h3>ze STAR WARS</h3>
+<img src="rysunki/chom_vader.jpeg" width="600" />
+<img src="rysunki/chom_babyyoda.jpeg" width="600" />
+<h3>tematyczne</h3>
+<img src="rysunki/chom_steampunk.jpeg" width="600" />
+<img src="rysunki/chom_halloween.jpeg" width="600" />
+<img src="rysunki/chom_Mikołaj.jpeg" width="600" />
+<img src="rysunki/chom_smok.jpeg" width="600" />
+<h3>inne</h3>
+<img src="rysunki/chom_świętujący.jpeg" width="600" />
+<img src="rysunki/chom_noworoczny.jpeg" width="600" />
+<img src="rysunki/chom_ninja.jpeg" width="600" />
+<img src="rysunki/chom_generał.jpeg" width="600" />
+<img src="rysunki/chom_zabójca.jpeg" width="600" />
+<img src="rysunki/chom_kolorowy.jpeg" width="600" />
 </body>
