dodałem skruty do różnych chomików

--- a/galeria.html
+++ b/galeria.html
@@ -6,15 +6,26 @@
 <body>
 <h1>galeria</h1>
 <nav><a href="index.html">główna</a></nav>
-<h3>historyczne</h3>
+<h3 id="góra">kategorie</h3>
+<a href="#historyczne">historyczne</a>
+<a href="#zawodowe">zawodowe</a><br/>
+<a href="#super bohaterowie">super bohaterowie</a>
+<a href="#w przebraniach">w przebraniach</a><br> 
+<a href="#ze STAR WARS">ze STAR WARS</a>
+<a href="#tematyczne">tematyczne</a><br>
+<a href="#inne">inne</a><br>
+
+<h3 id="historyczne">historyczne</h3>
 <img src="rysunki/chom_faraon.jpeg" width="600" />
 <img src="rysunki/chom_piękny.jpeg" width="600" />
 <img src="rysunki/chom_średniowieczny_1.jpeg" width="600" />
 <img src="rysunki/chom_średniowieczny_2.jpeg" width="600" />
 <img src="rysunki/chom_średniowieczny_3.jpeg" width="600" />
 <img src="rysunki/chom_średniowieczny_4.jpeg" width="600" />
-<img src="rysunki/chom_średniowieczny_5.jpeg" width="600" />\
-<h3>zawodowe</h3>
+<img src="rysunki/chom_średniowieczny_5.jpeg" width="600" />
+
+<h3 id="zawodowe">zawodowe</h3>
+<a href="#góra">góra</a>
 <img src="rysunki/chom_architekt_1.jpeg" width="600" />
 <img src="rysunki/chom_nurek.jpeg" width="600" />
 <img src="rysunki/chom_youtuber.jpeg" width="600" />
@@ -31,25 +42,36 @@
 <img src="rysunki/chom_naukowiec_1.jpeg" width="600" />
 <img src="rysunki/chom_naukowiec_2.jpeg" width="600" />
 <img src="rysunki/chom_naukowiec_3.jpeg" width="600" />
-<h3>super bohaterowie</h3>
+
+<h3 id="super bohaterowie">super bohaterowie</h3>
+<a href="#góra">góra</a>
 <img src="rysunki/chom_hulk.jpeg" width="600" />
 <img src="rysunki/chom_ironman.jpeg" width="600" />
 <img src="rysunki/chom_ironhulk.jpeg" width="600" />
-<h3>w przebraniach</h3>
+
+<h3 id="w przebraniach">w przebraniach</h3>
+<a href="#góra">góra</a>
 <img src="rysunki/chom_majonez.jpeg" width="600" />
-<h3>ze STAR WARS</h3>
+
+<h3 id="ze STAR WARS">ze STAR WARS</h3>
+<a href="#góra">góra</a>
 <img src="rysunki/chom_vader.jpeg" width="600" />
 <img src="rysunki/chom_babyyoda.jpeg" width="600" />
-<h3>tematyczne</h3>
+
+<h3 id="tematyczne">tematyczne</h3>
+<a href="#góra">góra</a>
 <img src="rysunki/chom_steampunk.jpeg" width="600" />
 <img src="rysunki/chom_halloween.jpeg" width="600" />
 <img src="rysunki/chom_Mikołaj.jpeg" width="600" />
 <img src="rysunki/chom_smok.jpeg" width="600" />
-<h3>inne</h3>
+
+<h3 id="inne">inne</h3>
+<a href="#góra">góra</a>
 <img src="rysunki/chom_świętujący.jpeg" width="600" />
 <img src="rysunki/chom_noworoczny.jpeg" width="600" />
 <img src="rysunki/chom_ninja.jpeg" width="600" />
 <img src="rysunki/chom_generał.jpeg" width="600" />
 <img src="rysunki/chom_zabójca.jpeg" width="600" />
 <img src="rysunki/chom_kolorowy.jpeg" width="600" />
+<img src="rysunki/chomik_w_ferrari.jpeg" width="600" />
 </body>
