--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,7 @@
 <img src="rysunki/chom_średniowieczny_5.jpeg" width="600" />
 
 <h3 id="zawodowe">zawodowe</h3>
-<a href="#góra">góra</a>
+<a href="#góra">góra</a><br>
 <img src="rysunki/chom_architekt_1.jpeg" width="600" />
 <img src="rysunki/chom_nurek.jpeg" width="600" />
 <img src="rysunki/chom_youtuber.jpeg" width="600" />
@@ -44,29 +44,29 @@
 <img src="rysunki/chom_naukowiec_3.jpeg" width="600" />
 
 <h3 id="super bohaterowie">super bohaterowie</h3>
-<a href="#góra">góra</a>
+<a href="#góra">góra</a><br>
 <img src="rysunki/chom_hulk.jpeg" width="600" />
 <img src="rysunki/chom_ironman.jpeg" width="600" />
 <img src="rysunki/chom_ironhulk.jpeg" width="600" />
 
 <h3 id="w przebraniach">w przebraniach</h3>
-<a href="#góra">góra</a>
+<a href="#góra">góra</a><br>
 <img src="rysunki/chom_majonez.jpeg" width="600" />
 
 <h3 id="ze STAR WARS">ze STAR WARS</h3>
-<a href="#góra">góra</a>
+<a href="#góra">góra</a><br>
 <img src="rysunki/chom_vader.jpeg" width="600" />
 <img src="rysunki/chom_babyyoda.jpeg" width="600" />
 
 <h3 id="tematyczne">tematyczne</h3>
-<a href="#góra">góra</a>
+<a href="#góra">góra</a><br>
 <img src="rysunki/chom_steampunk.jpeg" width="600" />
 <img src="rysunki/chom_halloween.jpeg" width="600" />
 <img src="rysunki/chom_Mikołaj.jpeg" width="600" />
 <img src="rysunki/chom_smok.jpeg" width="600" />
 
 <h3 id="inne">inne</h3>
-<a href="#góra">góra</a>
+<a href="#góra">góra</a><br>
 <img src="rysunki/chom_świętujący.jpeg" width="600" />
 <img src="rysunki/chom_noworoczny.jpeg" width="600" />
 <img src="rysunki/chom_ninja.jpeg" width="600" />
