--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h2>Dla Janka największego fana chomików.</h2>
 <h1>Witamy!</h1>
 <nav><a href="galeria.html">galeria</a></nav>
-<section><img src="rysunki/chom_średniowieczny_1.jpeg" width="100%"/></section>
+<section><img src="rysunki/chom_średniowieczny_witamy.jpeg" width="100%"/></section>
 
 </body>
